# ovh-dns-manager

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  credentials.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  docker.yml  security.yml  tests.yml
.opencode/: CONVENTIONS.md
docs/plans/: 2026-02-19-refactoring-plan.md
ovh_dns_manager/: __init__.py  __main__.py  cli.py  client.py  constants.py  credentials.py  dns.py  validation.py
src/: credentials.py  main.py  utils.py
tests/: conftest.py  test_cli.py  test_client.py  test_credentials.py  test_dns.py  test_main.py  test_utils.py  test_validation.py
