[project]
name = "ovh-dns-manager"
dynamic = ["version"]
description = "A CLI tool for managing DNS entries via OVH API"
readme = "README.md"
requires-python = ">=3.10"
# license = {text = "TBD"}  # To be chosen by the author
authors = [
    {name = "Yannis Duvignau", email = "yduvignau@snapp.fr"},
]
keywords = ["ovh", "dns", "cli", "manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Name Service (DNS)",
]

dependencies = [
    "ovh>=1.2.0",
    "rich>=14.0.0",
    "python-dotenv>=1.0.0",
    "coloredlogs>=15.0.0",
    "tenacity>=9.0.0",
]

[project.scripts]
ovh-dns-manager = "ovh_dns_manager.cli:main"
ovh-dns-credentials = "ovh_dns_manager.credentials:main"

[project.urls]
Homepage = "https://github.com/obeone/ovh-dns-manager"
Repository = "https://github.com/obeone/ovh-dns-manager"
Issues = "https://github.com/obeone/ovh-dns-manager/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]

[tool.setuptools.dynamic]
version = {attr = "ovh_dns_manager.__version__"}

[tool.setuptools.packages.find]
include = ["ovh_dns_manager*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"
